Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-pod
  template:
    metadata:
      labels:
        app: spring-pod
    spec:
      containers:
        - name: spring
          image: tamaraa213020/aplikacija:tag
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: springapp-config-volume
              mountPath: /etc/config
              readOnly: true
            - name: springapp-secret-volume
              mountPath: /etc/secret
              readOnly: true
      volumes:
        - name: springapp-config-volume
          configMap:
            name: springapp-config
        - name: springapp-secret-volume
          secret:
            secretName: springapp-secret
