Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: app-namespace
spec:
  selector:
    app: spring-pod
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
