Kubernetes/statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
  namespace: app-namespace
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgre
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgre
  namespace: app-namespace
spec:
  serviceName: postgre-service
  selector:
    matchLabels:
      app: postgre
  replicas: 1
  template:
    metadata:
      labels:
        app: postgre
        namespace: app-namespace
    spec:
      containers:
        - name: postgre
          image: tamaraa213020/baza
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: dbdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: postgre-pvc
